samples/_failures_safe/1761551130_8d7a4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_009d33e3.c: In function ‘main’:
./samples/SAFE/__tmp_009d33e3.c:175:5: error: expected declaration or statement at end of input
  175 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_009d33e3.c:175:5: error: expected declaration or statement at end of input
